# llm_control

./: .gitignore  start_sequence  test_sequence.json
datasets/: check.py  desk_dataset.jsonl  finetuning.py
install/: local_setup.sh  setup.sh
install/bcr_bot/share/bcr_bot/: local_setup.dsv  local_setup.sh  package.sh
install/bcr_bot/share/bcr_bot/config/: bcr_map.pgm  obstacle.json
install/bcr_bot_controller/lib/bcr_bot_controller/: path_follower
install/bcr_bot_controller/share/bcr_bot_controller/: package.dsv  package.sh  package.zsh
install/detection_manager/share/detection_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dwa_local_planner/lib/dwa_local_planner/: dwa_local_planner_node
install/dwa_local_planner/share/dwa_local_planner/: package.sh
install/line_following/lib/line_following/: follow_line
install/line_following/share/line_following/: package.sh
install/my_perception/lib/my_perception/: yolo_v5_ros2_node
install/my_perception/share/my_perception/: package.sh  package.xml
install/park_worlds/share/park_worlds/: local_setup.dsv  local_setup.sh  package.ps1  package.sh
install/simple_astar_planner/lib/simple_astar_planner/: auto_start_publisher  detection  gpt_api_controller  map_obstacle_extractor  navigator  obstacle_publisher  planner  sequences  takephoto
install/simple_astar_planner/share/simple_astar_planner/: package.bash  package.ps1  package.sh  package.zsh
src/bcr_bot/config/: bcr_map.pgm  obstacle.json
src/bcr_bot/launch/: gazebo.launch.py
src/bcr_bot/line_following/: setup.py
src/bcr_bot/line_following/launch/: follow_line.launch.py
src/bcr_bot/line_following/line_following/: follow_line.py
src/bcr_bot/urdf/: bcr_bot.xacro
src/bcr_bot_controller/: setup.cfg  setup.py
src/detection_manager/: package.xml  setup.py
src/dwa_local_planner/: setup.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/my_perception/share/my_perception/: package.dsv  package.ps1  package.sh  package.xml
src/line_following/: package.xml  setup.py
src/log/: latest_build
src/my_perception/: setup.cfg  setup.py
src/my_perception/my_perception/: yolo_v5.params.yaml  yolo_v5_ros2_node.py
src/my_perception/scripts/: yolo_v5_ros2_node
src/my_pkg/: test_pub.py
src/park_worlds/: CMakeLists.txt
src/park_worlds/worlds/: big_park.world
src/simple_astar_planner/: setup.cfg
src/simple_astar_planner/install/: local_setup.sh  setup.ps1  setup.sh
src/simple_astar_planner/launch/: astar_with_map.launch.py
src/simple_astar_planner/log/: latest_build
src/simple_astar_planner/src/simple_astar_planner/: detection.py  detection_client.py  gpt_api_controller.py  map_obstacle_extractor.py  navigator.py  takephoto.py
src/simple_astar_planner/src/simple_astar_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/simple_astar_planner/src/simple_astar_planner/prompt_branch/: plan_prompt.py
(+37 files in other folders)
