<?xml version="1.0"?>
<package format="3">
  <name>detection_manager</name>
  <version>0.1.0</version>
  <description>YOLO detection service for GPT controller</description>
  <maintainer email="you@example.com">changwoo</maintainer>
  <license>MIT</license>

  <!-- ament_python 빌드 타입 필수 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임/코드 의존 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- (테스트 안 쓰면 생략 가능)
  <test_depend>ament_pytest</test_depend>
  <test_depend>pytest</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
