[metadata]
name = simple_astar_planner
version = 0.0.0
description = A* path planner
author = changwoo
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    setuptools
    openai
    langchain-core 
    langchain-openai
zip_safe = true

[options.package_data]
* = *.py
[options.packages.find]
where = src

[options.data_files]
share/ament_index/resource_index/packages =
    resource/simple_astar_planner
share/simple_astar_planner =
    package.xml
share/simple_astar_planner/launch =
    launch/astar_with_map.launch.py

[options.entry_points]
console_scripts =
    planner = simple_astar_planner.planner:main
    auto_start_publisher = simple_astar_planner.auto_start_publisher:main
    navigator = simple_astar_planner.navigator:main
    sequences = simple_astar_planner.sequences:main
    takephoto = simple_astar_planner.takephoto:main
    gpt_api_controller = simple_astar_planner.gpt_api_controller:main
    obstacle_publisher = simple_astar_planner.obstacle_publisher:main
    detection = simple_astar_planner.detection:main
    map_obstacle_extractor = simple_astar_planner.map_obstacle_extractor:main

[develop]
script_dir=$base/lib/simple_astar_planner

[install]
install_scripts=$base/lib/simple_astar_planner
